updated genres lookup table

--- a/notebooks/spotify_audio_analysis.ipynb
+++ b/notebooks/spotify_audio_analysis.ipynb
@@ -399,6 +399,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "000xQL6tZNLJzIrtIgxqSl    2\n",
+       "001wUOgo8t9VElHl45bxzr    9\n",
+       "003eoIwxETJujVWmNFMoZy    5\n",
+       "003z5LtGJ2cdJARKIO9LgL    6\n",
+       "004S8bMhFQjnbuqvdh6W71    9\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kc_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -554,6 +579,281 @@
    "metadata": {},
    "source": [
     "I have slightly fewer works then what's present in my `song_df`. Still enough to get a decent analysis with, however."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merging Key Change listing with Spotify Features\n",
+    "\n",
+    "Since the general `key` of every song is shown within the `spotify_song_feat` table that I have, I'll merge it with the aforementioned table to cut down on extraneous lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>62bOmKYxYg7dhrC6gH9vFn</th>\n",
+       "      <td>0.610</td>\n",
+       "      <td>0.926</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-4.843</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0479</td>\n",
+       "      <td>0.0310</td>\n",
+       "      <td>0.001200</td>\n",
+       "      <td>0.0821</td>\n",
+       "      <td>0.861</td>\n",
+       "      <td>172.638</td>\n",
+       "      <td>200400</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46n2EGFnPC3tzWCN1Aqe26</th>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.587</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-6.279</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0329</td>\n",
+       "      <td>0.3540</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1280</td>\n",
+       "      <td>0.466</td>\n",
+       "      <td>165.975</td>\n",
+       "      <td>284760</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2AW37v0bDyuOzGP3XnmFuA</th>\n",
+       "      <td>0.636</td>\n",
+       "      <td>0.873</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-4.672</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0710</td>\n",
+       "      <td>0.0407</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.0372</td>\n",
+       "      <td>0.908</td>\n",
+       "      <td>165.071</td>\n",
+       "      <td>192427</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>594M0rqYMOo8BhMGEdoi5C</th>\n",
+       "      <td>0.686</td>\n",
+       "      <td>0.915</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-4.447</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0028</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>0.2330</td>\n",
+       "      <td>0.796</td>\n",
+       "      <td>110.054</td>\n",
+       "      <td>211000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0Jc8qF1mUPo1A96HE9QxZz</th>\n",
+       "      <td>0.706</td>\n",
+       "      <td>0.861</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-6.684</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1540</td>\n",
+       "      <td>0.0341</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1270</td>\n",
+       "      <td>0.923</td>\n",
+       "      <td>119.946</td>\n",
+       "      <td>238427</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        danceability  energy  key  loudness  mode  \\\n",
+       "id                                                                  \n",
+       "62bOmKYxYg7dhrC6gH9vFn         0.610   0.926    8    -4.843     0   \n",
+       "46n2EGFnPC3tzWCN1Aqe26         0.550   0.587    2    -6.279     1   \n",
+       "2AW37v0bDyuOzGP3XnmFuA         0.636   0.873    0    -4.672     0   \n",
+       "594M0rqYMOo8BhMGEdoi5C         0.686   0.915    7    -4.447     1   \n",
+       "0Jc8qF1mUPo1A96HE9QxZz         0.706   0.861   11    -6.684     1   \n",
+       "\n",
+       "                        speechiness  acousticness  instrumentalness  liveness  \\\n",
+       "id                                                                              \n",
+       "62bOmKYxYg7dhrC6gH9vFn       0.0479        0.0310          0.001200    0.0821   \n",
+       "46n2EGFnPC3tzWCN1Aqe26       0.0329        0.3540          0.000000    0.1280   \n",
+       "2AW37v0bDyuOzGP3XnmFuA       0.0710        0.0407          0.000001    0.0372   \n",
+       "594M0rqYMOo8BhMGEdoi5C       0.0364        0.0028          0.000007    0.2330   \n",
+       "0Jc8qF1mUPo1A96HE9QxZz       0.1540        0.0341          0.000000    0.1270   \n",
+       "\n",
+       "                        valence    tempo  duration_ms  time_signature  \n",
+       "id                                                                     \n",
+       "62bOmKYxYg7dhrC6gH9vFn    0.861  172.638       200400               4  \n",
+       "46n2EGFnPC3tzWCN1Aqe26    0.466  165.975       284760               4  \n",
+       "2AW37v0bDyuOzGP3XnmFuA    0.908  165.071       192427               4  \n",
+       "594M0rqYMOo8BhMGEdoi5C    0.796  110.054       211000               4  \n",
+       "0Jc8qF1mUPo1A96HE9QxZz    0.923  119.946       238427               4  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_feat = pd.read_csv('../data/spotify_song_feat.csv').set_index('id')\n",
+    "song_feat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat.drop(labels=non_songs['s_song_id'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat_kc = song_feat.merge(pd.DataFrame(kc_df), left_on='id', right_on=kc_df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat_kc.rename({0:'key_changes'}, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23661, 15)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_feat_kc.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Removing Duplicate Songs from `song_feat_kc`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat_kc.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat_kc.set_index('id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exporting Song Feats back to `csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat_kc.to_csv('../data/song_feats.csv')"
    ]
   },
   {
