final feature df + more EDA

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -21,16 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### One-Hot Encode Genres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "songs = pd.read_csv('../data/song_list_v2.csv').set_index('s_song_id')"
+    "## One-Hot Encode Genres"
    ]
   },
   {
@@ -39,7 +30,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "songs = pd.read_csv('../data/song_list_v2.csv').set_index('s_song_id')\n",
     "gs = pd.read_csv('../data/gsong_lookup.csv').set_index('gs_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feats = "
    ]
   },
   {
@@ -558,11 +559,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One-Hot Encoding Additional Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "main_wfeats = pd.read_csv('../data/main_wfeats.csv', index_col='')"
+   ]
   }
  ],
  "metadata": {
