more EDA + removed Jerky Boys from song list +  new model nb

--- a/notebooks/spotify_songs.ipynb
+++ b/notebooks/spotify_songs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "engine = create_engine('postgresql://postgres:glide-mortuary-pod-cloy-belong@ec2-54-244-70-11.us-west-2.compute.amazonaws.com:5432/postgres')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +169,7 @@
        "4                                       Deeper  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,17 +430,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for genre in all_genres:\n",
-    "#     if 'rock' in genre:\n",
-    "#         print(genre)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -458,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +685,6 @@
     "|Artist | Artist ID|\n",
     "|---|---|\n",
     "| Adam Sandler | 2LB9H0px4qWbCHg9Axzhga |\n",
-    "| The Jerky Boys | 4afEuMmqeS7G5nlKF3jSM0 |\n",
     "|Rodney Carrington | 7xsMZdxw6eEJXGTLZulONO|\n",
     "|Bowling for Soup | 5ND0mGcL9SKSjWIjPd0xIb|\n",
     "|Cledus T. Judd | 1AhfLNt7teChymEclbsHlo|\n",
@@ -716,14 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "comic_array = pot_comics['s_artist_id']\n",
-    "non_comics = ['2LB9H0px4qWbCHg9Axzhga', '4afEuMmqeS7G5nlKF3jSM0', '7xsMZdxw6eEJXGTLZulONO',\n",
-    "              '5ND0mGcL9SKSjWIjPd0xIb', '1AhfLNt7teChymEclbsHlo', '4xtWjIlVuZwTCeqVAsgEXy',\n",
-    "              '3bXhZFreBJF4QDUUiMmtZW', '5r1bdqzhgRoHC3YcCV6N5a']\n",
+    "non_comics = ['2LB9H0px4qWbCHg9Axzhga', '7xsMZdxw6eEJXGTLZulONO','5ND0mGcL9SKSjWIjPd0xIb', \n",
+    "              '1AhfLNt7teChymEclbsHlo', '4xtWjIlVuZwTCeqVAsgEXy','3bXhZFreBJF4QDUUiMmtZW', \n",
+    "              '5r1bdqzhgRoHC3YcCV6N5a']\n",
     "comics_to_remove = []\n",
     "for comic in comic_array:\n",
     "    if comic not in non_comics:\n",
@@ -739,47 +718,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(22, 23)"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "non_artists = artist_df.query(\"s_artist_id in @comics_to_remove\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(215, 8)"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "non_songs = song_df.query(\"artist_id in @comics_to_remove\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +878,7 @@
        "7urq0VfqxEYEEiZUkebXT4                  112          68   455231.0"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,33 +886,6 @@
    "source": [
     "artist_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(22914, 8)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "song_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
