--- a/notebooks/nn.ipynb
+++ b/notebooks/nn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nearest Neighbors Model"
+    "# Using Nearest Neighbors to Determine Recommendations"
    ]
   },
   {
