start tech report

--- a/notebooks/spotify_songs.ipynb
+++ b/notebooks/spotify_songs.ipynb
@@ -31,12 +31,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.base.Connection at 0x7f48b5531b70>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine = create_engine('postgresql://postgres:glide-mortuary-pod-cloy-belong@ec2-54-244-70-11.us-west-2.compute.amazonaws.com:5432/postgres')\n",
+    "engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "song_df = pd.read_sql('''\n",
-    "                SELECT DISTINCT * FROM spotify_song_list;\n",
+    "                SELECT * FROM spotify_song_list;\n",
     "                ''', con=engine)\n",
     "artist_df = pd.read_sql('''\n",
     "                SELECT * FROM spotify_artists;\n",
@@ -45,137 +66,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>s_song_id</th>\n",
-       "      <th>album_release_date</th>\n",
-       "      <th>artist_id</th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>explicit</th>\n",
-       "      <th>linked_album</th>\n",
-       "      <th>song_title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6SluaPiV04KOaRTOIScoff</td>\n",
-       "      <td>1995-10-13</td>\n",
-       "      <td>6UE7nl9mha6s8z0wFQFIZ2</td>\n",
-       "      <td>Robyn</td>\n",
-       "      <td>229226.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Robyn Is Here</td>\n",
-       "      <td>Show Me Love - Radio Version</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5qEVq3ZEGr0Got441lueWS</td>\n",
-       "      <td>2018-08-10</td>\n",
-       "      <td>6S58b0fr8TkWrEHOH4tRVu</td>\n",
-       "      <td>Switchfoot</td>\n",
-       "      <td>247240.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>You Found Me (Unbroken: Path To Redemption)</td>\n",
-       "      <td>You Found Me (Unbroken: Path To Redemption)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5kqIPrATaCc2LqxVWzQGbk</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>25u4wHJWxCA9vO0CzxAbK7</td>\n",
-       "      <td>Lukas Graham</td>\n",
-       "      <td>237300.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Lukas Graham</td>\n",
-       "      <td>7 Years</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3aVyHFxRkf8lSjhWdJ68AW</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0C0XlULifJtAgn6ZNCW2eu</td>\n",
-       "      <td>The Killers</td>\n",
-       "      <td>262000.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Direct Hits</td>\n",
-       "      <td>Just Another Girl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0zIyxS6QxZogHOpGkI6IZH</td>\n",
-       "      <td>2018-09-07</td>\n",
-       "      <td>0le01dl1WllSHhjEXRl4in</td>\n",
-       "      <td>Tamia</td>\n",
-       "      <td>236545.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Passion Like Fire</td>\n",
-       "      <td>Deeper</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                s_song_id album_release_date               artist_id  \\\n",
-       "0  6SluaPiV04KOaRTOIScoff         1995-10-13  6UE7nl9mha6s8z0wFQFIZ2   \n",
-       "1  5qEVq3ZEGr0Got441lueWS         2018-08-10  6S58b0fr8TkWrEHOH4tRVu   \n",
-       "2  5kqIPrATaCc2LqxVWzQGbk         2016-04-01  25u4wHJWxCA9vO0CzxAbK7   \n",
-       "3  3aVyHFxRkf8lSjhWdJ68AW         2013-01-01  0C0XlULifJtAgn6ZNCW2eu   \n",
-       "4  0zIyxS6QxZogHOpGkI6IZH         2018-09-07  0le01dl1WllSHhjEXRl4in   \n",
-       "\n",
-       "    artist_name  duration_ms  explicit  \\\n",
-       "0         Robyn     229226.0     False   \n",
-       "1    Switchfoot     247240.0     False   \n",
-       "2  Lukas Graham     237300.0     False   \n",
-       "3   The Killers     262000.0     False   \n",
-       "4         Tamia     236545.0     False   \n",
-       "\n",
-       "                                  linked_album  \\\n",
-       "0                                Robyn Is Here   \n",
-       "1  You Found Me (Unbroken: Path To Redemption)   \n",
-       "2                                 Lukas Graham   \n",
-       "3                                  Direct Hits   \n",
-       "4                            Passion Like Fire   \n",
-       "\n",
-       "                                    song_title  \n",
-       "0                 Show Me Love - Radio Version  \n",
-       "1  You Found Me (Unbroken: Path To Redemption)  \n",
-       "2                                      7 Years  \n",
-       "3                            Just Another Girl  \n",
-       "4                                       Deeper  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 23888 entries, 0 to 23887\n",
+      "Data columns (total 8 columns):\n",
+      "s_song_id             23888 non-null object\n",
+      "album_release_date    23888 non-null object\n",
+      "artist_id             23888 non-null object\n",
+      "artist_name           23888 non-null object\n",
+      "duration_ms           23888 non-null float64\n",
+      "explicit              23888 non-null bool\n",
+      "linked_album          23888 non-null object\n",
+      "song_title            23888 non-null object\n",
+      "dtypes: bool(1), float64(1), object(6)\n",
+      "memory usage: 1.3+ MB\n"
+     ]
     }
    ],
    "source": [
-    "song_df.head()"
+    "song_df.info()"
    ]
   },
   {
