--- a/notebooks/genius.ipynb
+++ b/notebooks/genius.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "r = requests.get(url_2)\n",
-    "song_ids = r.json()\n"
+    "song_ids = r.json()"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
