cleaning riaa_data nb

--- a/notebooks/cosine.ipynb
+++ b/notebooks/cosine.ipynb
@@ -8,6 +8,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cosine Similartiy Overview\n",
+    "\n",
+    "Cosine Similarity is the normalized dot product of two vectors, A & B, and can be written as such:\n",
+    "\n",
+    "$$cos(\\theta) = \\frac{AB^T}{\\|A\\|\\|B\\|}$$\n",
+    "\n",
+    "In the instance of this recommender the two vectors are the same, the overall song matrix derived in the Preprocessing notebook.\n",
+    "\n",
+    "## Why Cosine Similarity?\n",
+    "\n",
+    "The short of this is: Because it provided results that sounded the most similar to songs provided in testing.\n",
+    "\n",
+    "### Analysis\n",
+    "\n",
+    "I think intuitively, that a measurement like Euclidean distance makes more sense when trying to measure the similarity of songs using the feature sets that are incorporated here, wherein the most of the features are measurements centered around zero. However, in aggregate, the test results using Cosine similarity sounded closer to the original titles provided than the results utilizing euclidean distance. The songs recommended through cosine similarity were also more diverse, in terms of the performing artist. Wherein, usine euclidean distance, there was a higher frequency of the same artist who\n",
+    "\n",
+    "Cosine similarity also works well for dense data sets, which is exactly what we have for the genre based features passed through SVD. It's built to better incorporate the directionality of those genre components regardless of their magnitude."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
