--- a/notebooks/riaa_data.ipynb
+++ b/notebooks/riaa_data.ipynb
@@ -5,61 +5,37 @@
    "metadata": {},
    "source": [
     "# Retrieving RIAA Award-Winning Artists\n",
-    "Original Date of Extracted Elements: 9/22/18"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pickle\n",
-    "import re\n",
-    "import requests\n",
-    "import splinter\n",
-    "import selenium\n",
-    "import time\n",
     "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using Requests & BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://www.riaa.com/gold-platinum/?tab_active=awards_by_artist#search_section'\n",
-    "headers = {'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:62.0) Gecko/20100101 Firefox/62.0'}\n",
-    "res = requests.get(url, headers=headers)"
+    "*Original Date of Extracted Elements: 9/22/18*\n",
+    "\n",
+    "Description: Querying the RIAA Gold and Platinum [website](https://www.riaa.com/gold-platinum/) for all artists whom have garnered a sales award throughout it's history. These artists will then be queried against the Spotify API for their top-10 most popular tracks."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'splinter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-60f3aca01521>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msplinter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mselenium\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'splinter'"
+     ]
+    }
+   ],
    "source": [
-    "# res.text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Verdict:** Can't figure out a way to interact with the \"Load More\" button to retrieve more rows. I'll give Splinter a shot"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import re\n",
+    "import splinter\n",
+    "import selenium\n",
+    "import time"
    ]
   },
   {
@@ -101,22 +77,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Testing `find_by` for Table Elements**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [element.value for element in all_tables]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Extracting all Artists in RIAA table**"
    ]
   },
@@ -126,9 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for i in range(200):\n",
-    "#     load_more.click()\n",
-    "#     time.sleep(2)"
+    "for i in range(200):\n",
+    "    load_more.click()\n",
+    "    time.sleep(2)"
    ]
   },
   {
@@ -209,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pickling Lists"
+    "##### Pickling Lists for Access Later"
    ]
   },
   {
@@ -236,9 +196,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks like there's a total of 2515 entries on the artist listing. There were 2547 nodes representing the table within the Firefox Inspector. I wonder if that means we're missing a few entries (32).\n",
-    "\n",
-    "Update (9/29/18): I added this `artist_list_td`. I'm not sure if it's the same, but the length is 2514. This list will be much easier to query the spotify api with."
+    "##### Opening `artist_list_td`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./pickle/artist_list_td.pkl', 'rb+') as f:\n",
+    "    artist_list_td = pickle.load(f)"
    ]
   },
   {
@@ -1811,7 +1779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
