cleaning nbs for tech report

--- a/notebooks/01b_collection_audio_feat.ipynb
+++ b/notebooks/01b_collection_audio_feat.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Querying Spotipy for Audio Features + Analysis"
+    "# 01b_Collection: Querying Spotipy for Audio Features + Analysis\n",
+    "\n",
+    "**Description**: Using the Spotipy wrapper, retrieving audio features and audio analysis from the Spotify API.\n",
+    "\n",
+    "**Disclaimer**: Since certain processes within this notebook require API keys (which are not stored within this notebook), it is not possible to run every cell from start to finish. If you'd like to do so, you'll need to request Spotify API access with client credentials [here](https://developer.spotify.com/dashboard/login)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "1. Retrieving Audio Features\n",
+    "2. Retrieving Audio Analysis"
    ]
   },
   {
@@ -20,9 +34,15 @@
     "import re\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "import sys\n",
     "import time\n",
     "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Disclaimer:** Client Credentials are listed for illustrative purposes only. You will not be able to replicate the information contained here without actual API access credentials."
    ]
   },
   {
@@ -31,25 +51,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"2414300dd5be4a3cb0e9d83ecebe3964\",\n",
-    "                                                          client_secret=\"f9c2e12e1f0247a4a74cf8e821a69aa7\")\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=\"xXXXXXxxxXXXXXxxxxXXXxx\",\n",
+    "                                                          client_secret=\"xXXXXXxxxXXXXXxxxxXXXxx\")\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sp.audio_analysis('62bOmKYxYg7dhrC6gH9vFn')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example Retrievals"
+    "#### Testing Connection"
    ]
   },
   {
@@ -90,20 +101,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "with open('../data/example_song_analysis.json', 'w') as f:\n",
-    "    json.dump(example, f)"
+    "### 1. Retrieving Audio Features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieving Song List from Spotipy Notebook"
+    "#### Loading in Song List"
    ]
   },
   {
@@ -117,39 +125,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# song_list[500:1000]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieving Audio Features for Every Song in `song_list`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(song_list[0])"
+    "#### 1a. Retrieving Audio Features for Every Song in `song_list`\n",
+    "\n",
+    "Adding `try` & `except` statements, along with `sleep` times was necessary to keep audio feature extraction going uninterrupted."
    ]
   },
   {
@@ -203,15 +184,6 @@
    "source": [
     "with open('../pickle/song_feat.pkl', 'wb+') as f:\n",
     "    pickle.dump(song_feat, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# song_feat[209]"
    ]
   },
   {
@@ -499,13 +471,6 @@
     "with open('../data/master_song_list.json', 'w+') as f:\n",
     "    json.dump(master_song_list, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -524,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
