--- a/notebooks/spotipy.ipynb
+++ b/notebooks/spotipy.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extracting Artist Info via Spotipy"
+    "# 01b_Collection: Extracting Artist Info via Spotipy\n",
+    "\n",
+    "Description: "
    ]
   },
   {
@@ -66,11 +68,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'artists': {'href': 'https://api.spotify.com/v1/search?query=%27N+SYNC&type=artist&offset=0&limit=10',\n",
+       "  'items': [{'external_urls': {'spotify': 'https://open.spotify.com/artist/6Ff53KvcvAj5U7Z1vojB5o'},\n",
+       "    'followers': {'href': None, 'total': 760828},\n",
+       "    'genres': ['boy band', 'dance pop', 'europop', 'pop', 'post-teen pop'],\n",
+       "    'href': 'https://api.spotify.com/v1/artists/6Ff53KvcvAj5U7Z1vojB5o',\n",
+       "    'id': '6Ff53KvcvAj5U7Z1vojB5o',\n",
+       "    'images': [{'height': 1173,\n",
+       "      'url': 'https://i.scdn.co/image/c56cf0cc89c8ecfec7145cf065ea2006d0706605',\n",
+       "      'width': 1000},\n",
+       "     {'height': 751,\n",
+       "      'url': 'https://i.scdn.co/image/b119bdb5ef8a56c1b4aaa552f3ed686fab4aaff0',\n",
+       "      'width': 640},\n",
+       "     {'height': 235,\n",
+       "      'url': 'https://i.scdn.co/image/fc8b9594cca9210bb91ec1d63172ef021217905b',\n",
+       "      'width': 200},\n",
+       "     {'height': 75,\n",
+       "      'url': 'https://i.scdn.co/image/02f562244708fb6e951a93b1b9131d2fb9bfba06',\n",
+       "      'width': 64}],\n",
+       "    'name': '*NSYNC',\n",
+       "    'popularity': 71,\n",
+       "    'type': 'artist',\n",
+       "    'uri': 'spotify:artist:6Ff53KvcvAj5U7Z1vojB5o'},\n",
+       "   {'external_urls': {'spotify': 'https://open.spotify.com/artist/3WSOflN2YDXQTxEVClKvpS'},\n",
+       "    'followers': {'href': None, 'total': 1589},\n",
+       "    'genres': [],\n",
+       "    'href': 'https://api.spotify.com/v1/artists/3WSOflN2YDXQTxEVClKvpS',\n",
+       "    'id': '3WSOflN2YDXQTxEVClKvpS',\n",
+       "    'images': [{'height': 640,\n",
+       "      'url': 'https://i.scdn.co/image/301645df804429a6b0ce35914bf94b016c6753dd',\n",
+       "      'width': 640},\n",
+       "     {'height': 300,\n",
+       "      'url': 'https://i.scdn.co/image/3d58954ab11472d8e9316a53a9ad48f7d0fb7795',\n",
+       "      'width': 300},\n",
+       "     {'height': 64,\n",
+       "      'url': 'https://i.scdn.co/image/a5ffb62b3f7d74299b9a9b37163b4dbe6e611ba1',\n",
+       "      'width': 64}],\n",
+       "    'name': 'N-Sync',\n",
+       "    'popularity': 11,\n",
+       "    'type': 'artist',\n",
+       "    'uri': 'spotify:artist:3WSOflN2YDXQTxEVClKvpS'},\n",
+       "   {'external_urls': {'spotify': 'https://open.spotify.com/artist/6siQVjH6hO8QqxfVrgpvkH'},\n",
+       "    'followers': {'href': None, 'total': 22},\n",
+       "    'genres': [],\n",
+       "    'href': 'https://api.spotify.com/v1/artists/6siQVjH6hO8QqxfVrgpvkH',\n",
+       "    'id': '6siQVjH6hO8QqxfVrgpvkH',\n",
+       "    'images': [{'height': 640,\n",
+       "      'url': 'https://i.scdn.co/image/de721955d5b9d7a7624ee85a48cff6e18eb49017',\n",
+       "      'width': 640},\n",
+       "     {'height': 300,\n",
+       "      'url': 'https://i.scdn.co/image/7640942a8c5cccaa495af073f1a2ee8be77f0fef',\n",
+       "      'width': 300},\n",
+       "     {'height': 64,\n",
+       "      'url': 'https://i.scdn.co/image/3b92b42a2b57a3a07dff83b6a6d323e23f616cbc',\n",
+       "      'width': 64}],\n",
+       "    'name': \"Kitch 'n Sync\",\n",
+       "    'popularity': 0,\n",
+       "    'type': 'artist',\n",
+       "    'uri': 'spotify:artist:6siQVjH6hO8QqxfVrgpvkH'}],\n",
+       "  'limit': 10,\n",
+       "  'next': None,\n",
+       "  'offset': 0,\n",
+       "  'previous': None,\n",
+       "  'total': 3}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "artist = sp.search(\"'N SYNC\", type='artist')"
+    "artist = sp.search(\"'N SYNC\", type='artist')\n",
+    "artist"
    ]
   },
   {
@@ -4995,7 +5071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
